--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,7 @@ jobs:
         run: python generate.py
 
       - name: Deploy to Netlify
-        run: netlify deploy --prod --dir .
-        working-directory: Lean/_docs
+        run: netlify deploy --prod --dir Lean/_docs
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
