--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: 0 0 * * *
+  # schedule:
+  #   - cron: 0 0 * * *
 
 jobs:
   deploy:
@@ -15,29 +15,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
+      # - name: Set up Python
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.8
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 14
 
-      - name: Install Doxygen and Graphviz
-        run: sudo apt-get install -y doxygen graphviz
+      # - name: Install Doxygen and Graphviz
+      #   run: sudo apt-get install -y doxygen graphviz
 
       - name: Install Netlify CLI
         run: |
           yarn global add netlify-cli
           echo "$(yarn global bin)" >> $GITHUB_PATH
 
-      - name: Generate API documentation
-        run: python generate.py
+      # - name: Generate API documentation
+      #   run: python generate.py
 
       - name: Deploy to Netlify
         run: netlify deploy --prod --dir Lean/_docs
+        run: netlify deploy --prod --dir deprecated
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
